--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.14",
     "next": "15.3.0",
     "postcss": "^8.4.38",
