--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/postcss": "^4.1.4",
     "autoprefixer": "^10.4.14",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.11.7",
     "next": "15.3.0",
     "postcss": "^8.4.38",
     "react": "^19.0.0",
