--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "autoprefixer": "^10.4.14",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^12.9.1",
     "next": "15.3.0",
     "postcss": "^8.4.38",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
