--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4.1.4",
     "autoprefixer": "^10.4.14",
+    "dagre": "^0.8.5",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.9.1",
@@ -22,10 +23,12 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "reactflow": "^11.11.4",
+    "recharts": "^2.15.3",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/dagre": "^0.7.52",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
